Fixed light/dark mode icons

--- a/frontend/src/Pages/Home/_home.scss
+++ b/frontend/src/Pages/Home/_home.scss
@@ -23,6 +23,10 @@
 .theme-icon {
     padding-left: 10px;
     padding-top: 10px;
+
+    > div {
+        cursor: pointer;
+    }
 }
 
 @include themify($themes) {
